--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <li class="nav-item"><a class="nav-link" href="#tour">Tour</a></li>
             <li class="nav-item"><a class="nav-link" href="#album">Album</a></li>
         </ul>
+         <button id="theme-toggle" class="btn btn-outline-secondary ms-3">🌙</button>
         </div>
     </div>
     </nav>
